sftp/1.3/modules/ROOT/pages/sftp-read.adoc
= Read a File Using the SFTP Connector - Mule 4
:page-aliases: connectors::sftp/sftp-read.adoc

Anypoint Connector for SFTP (SFTP Connector) can read a file at any point in the flow, unlike in Mule 3, where the transport can only read files as a result of inbound endpoint polling.

The Read operation reads the file in the given path, and returns a Mule message (`MuleMessage`) with the following attributes:

* The file's content as the payload
* The file's metadata in the message attributes
* If the file does not exist, you receive an `SFTP:ILLEGAL_PATH` error. Note that the operation does not read directories.

To add the Read operation in Studio, follow these steps:

. In the *Mule Palette* view, search *SFTP* and select the *Read* operation.
. Drag the *Read* operation onto the Studio canvas.
. In the *General* tab of the operation configuration screen, click the plus sign (*+*) next to the *Connector configuration* field to access the global element configuration fields.
. Specify the connection information and click *OK*.
. In the *General* tab, set the *File Path* field to `#[path]` to set the path of the file to read.
. In the *Advanced* tab, set the *MIME Type* field to `application/xml`, and the *Encoding* field to `ISO 10646/Unicode(UTF-8)`.

The following screenshot shows the *Read* operation configuration:

.Read operation configuration
image::sftp-read-operation.png[Read operation configuration in Studio]

In the XML editor, the configuration looks like this:
[source,xml,linenums]
----
<sftp:read path="#[path]"
  lock="true|false"
  outputEncoding="UTF-8"
  outputMimeType="application/xml" />
----

// == INCLUDE SHARED READ OP CONTENT FOR FILE, FTP, AND SFTP CONNECTORS
include::partial$common-read-operation.adoc[]

// == File Locking SHARED BY FTP AND SFTP only
include::partial$common-file-lock.adoc[]

//== STREAMING INCLUDE in File, FTP, and SFTP Connector docs
include::partial$common-streaming.adoc[]

== See Also

xref:sftp-examples.adoc[SFTP Connector Examples]
